Moved pfSoundNode and pfSoundTraverser out of the VR Juggler Performer Draw Manager library and into the sample code tree.  Those two classes now live alongside all of the other Performer utility code in the pfTools directory.
Bumped version to 1.1.152.

Suggested by:	browner10


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15027 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/samples/Pf/advanced/pfConfigNav/Makefile.in
+++ b/juggler/modules/vrjuggler/samples/Pf/advanced/pfConfigNav/Makefile.in
@@ -43,6 +43,8 @@ APP_NAME=	pfBasicConfigNav@EXEEXT@
 srcdir=		@srcdir@
 COMMON_SRCS=	simplePfNavApp.cpp	\
 		pfFileIO.cpp		\
+		pfSoundNode.cpp		\
+		pfSoundTraverser.cpp	\
 		pfTerryCollide.cpp	\
 		pfTerryPogoCollide.cpp	\
 		pfTerryBoxCollide.cpp	\
