--- a/juggler/modules/vrjuggler/samples/Pf/advanced/pfConfigNav/pfConfigNav.vcproj
+++ b/juggler/modules/vrjuggler/samples/Pf/advanced/pfConfigNav/pfConfigNav.vcproj
@@ -143,6 +143,12 @@
 				RelativePath="..\pfTools\pfMPStats.cpp">
 			</File>
 			<File
+				RelativePath="..\pfTools\pfSoundNode.cpp">
+			</File>
+			<File
+				RelativePath="..\pfTools\pfSoundTraverser.cpp">
+			</File>
+			<File
 				RelativePath="..\nav\pfTerryBoxCollide.cpp">
 			</File>
 			<File
@@ -211,6 +217,12 @@
 			</File>
 			<File
 				RelativePath="..\pfTools\pfNavDCS.h">
+			</File>
+			<File
+				RelativePath="..\pfTools\pfSoundNode.h">
+			</File>
+			<File
+				RelativePath="..\pfTools\pfSoundTraverser.h">
 			</File>
 			<File
 				RelativePath="..\nav\pfPogoCollider.h">
