--- a/juggler/modules/vrjuggler/samples/Pf/advanced/pfNav/Makefile.in
+++ b/juggler/modules/vrjuggler/samples/Pf/advanced/pfNav/Makefile.in
@@ -42,6 +42,8 @@ APP_NAME=	pfNav@EXEEXT@
 srcdir=		@srcdir@
 COMMON_SRCS=	simplePfNavApp.cpp	\
 		pfFileIO.cpp		\
+		pfSoundNode.cpp		\
+		pfSoundTraverser.cpp	\
 		pfTerryCollide.cpp	\
 		pfTerryPogoCollide.cpp	\
 		pfTerryBoxCollide.cpp	\
