Moved the class vrj::FileIO out of the base VR Juggler library and into the Performer sample utility code.  It now lives in the pfTools directory and is called vrjutil::FileIO.  Nothing except the Performer sample applications used this class, so in my estimation, it does not belong in the base VR Juggler library.  Furthermore, after looking at what vrjutil:FileIO does, I think it would be beneficial to replace the whole class by a couple of Boost.Filesystem calls.
Bumped version to 1.1.153.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15030 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/samples/Pf/advanced/pfConfigNav/Makefile.in
+++ b/juggler/modules/vrjuggler/samples/Pf/advanced/pfConfigNav/Makefile.in
@@ -42,6 +42,7 @@ APP_NAME=	pfBasicConfigNav@EXEEXT@
 # Basic options.
 srcdir=		@srcdir@
 COMMON_SRCS=	simplePfNavApp.cpp	\
+		FileIO.cpp		\
 		pfFileIO.cpp		\
 		pfSoundNode.cpp		\
 		pfSoundTraverser.cpp	\
