--- a/juggler/modules/vrjuggler/samples/Pf/advanced/pfNav/Makefile.in
+++ b/juggler/modules/vrjuggler/samples/Pf/advanced/pfNav/Makefile.in
@@ -41,6 +41,7 @@ APP_NAME=	pfNav@EXEEXT@
 # Basic options.
 srcdir=		@srcdir@
 COMMON_SRCS=	simplePfNavApp.cpp	\
+		FileIO.cpp		\
 		pfFileIO.cpp		\
 		pfSoundNode.cpp		\
 		pfSoundTraverser.cpp	\
