--- a/modules/vrjuggler/samples/Pf/advanced/pfConfigNav/Makefile.in
+++ b/modules/vrjuggler/samples/Pf/advanced/pfConfigNav/Makefile.in
@@ -42,6 +42,7 @@ APP_NAME=	pfBasicConfigNav@EXEEXT@
 # Basic options.
 srcdir=		@srcdir@
 COMMON_SRCS=	simplePfNavApp.cpp	\
+		FileIO.cpp		\
 		pfFileIO.cpp		\
 		pfSoundNode.cpp		\
 		pfSoundTraverser.cpp	\
