--- a/juggler/modules/vrjuggler/configure.in
+++ b/juggler/modules/vrjuggler/configure.in
@@ -168,6 +168,9 @@ fi
 # Ensure that a version of Perl greater than or equal to 5.004 is available.
 DPP_PERL_VER(5.004, , , [AC_MSG_ERROR([*** Perl is required ***])])
 AC_CHECK_PROG([MTREE_CMD], [mtree], [mtree], [\$(PERL) \$(scriptdir)/mtree.pl])
+
+DPP_HAVE_GNU_MAKE([3.78], ,
+    [AC_MSG_ERROR([*** The build system requires GNU make 3.78 or newer ***])])
 DPP_BASIC_PROGS($PLATFORM, $OS_TYPE)
 DPP_PROG_INSTALL
 
@@ -735,11 +738,11 @@ AC_OUTPUT
 
 cat <<BUILD_INFO
 
- Remember that you need to build Juggler with GNU make.
- GNU make is sometimes installed as 'gmake'.
+ GNU make is required to build the Juggler Suite.
+ On your system, GNU make is the command $GMAKE.
  To build and install everything into $prefix,
  run the following:
 
-    gmake build install
+    $GMAKE build install
 
 BUILD_INFO
