Bug fixed:	GMTL include path was not setup correctly in instlinks when GMTL path was separate from other deps.
This fixes a copy and paste error in the Makefile and updates the configure script to the new calling interface for setting gmtl paths.

Reviewed by:	Patrick


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@15039 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/external/Makefile.in
+++ b/external/Makefile.in
@@ -160,7 +160,7 @@ links-cppdom:
 links-gmtl:
 	$(SHELL) $(MKINSTALLDIRS) $(instlinks)/include
 	-$(RM_LN) $(instlinks)/include/gmtl
-	$(LN_S) $(CPPDOM_ROOT)/include/gmtl $(instlinks)/include/gmtl
+	$(LN_S) $(GMTL_ROOT)/include/gmtl $(instlinks)/include/gmtl
 
 links-audiere:
 	$(SHELL) $(MKINSTALLDIRS) $(instlinks)/include
