Added a standalone version of the driver.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15073 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/drivers/USDigital/SerialEncoder/Makefile.in
+++ b/juggler/modules/gadgeteer/drivers/USDigital/SerialEncoder/Makefile.in
@@ -51,7 +51,8 @@ INSTALL_FILES=
 SUBOBJDIR=	$(DRIVER_NAME)
 C_AFTERBUILD=	driver-dso
 
-SRCS=		SerialEncoder.cpp		
+SRCS=		SerialEncoder.cpp \
+		SerialEncoderStandalone.cpp
 
 include $(MKPATH)/dpp.obj.mk
 include @topdir@/driver.defs.mk
