Sync up with the addition of new files in the source tree.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15075 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/Gadgeteer/SerialEncoder/SerialEncoder.vcproj
+++ b/juggler/vc7/Gadgeteer/SerialEncoder/SerialEncoder.vcproj
@@ -121,6 +121,9 @@
 			<File
 				RelativePath="..\..\..\modules\gadgeteer\drivers\USDigital\SerialEncoder\SerialEncoder.cpp">
 			</File>
+			<File
+				RelativePath="..\..\..\modules\gadgeteer\drivers\USDigital\SerialEncoder\SerialEncoderStandalone.cpp">
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -133,6 +136,9 @@
 			</File>
 			<File
 				RelativePath="..\..\..\modules\gadgeteer\drivers\USDigital\SerialEncoder\SerialEncoder.h">
+			</File>
+			<File
+				RelativePath="..\..\..\modules\gadgeteer\drivers\USDigital\SerialEncoder\SerialEncoderStandalone.h">
 			</File>
 		</Filter>
 		<Filter
