New feature:	Added SRCS for SpeechReco Devices and Proxies. Refactor: Bug fixed: SF Bug#:
Submitted by:
Reviewed by:
Approved by:
Obtained from:


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15117 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/gadget/Type/Makefile.in
+++ b/juggler/modules/gadgeteer/gadget/Type/Makefile.in
@@ -59,6 +59,10 @@ SRCS=		Analog.cpp			\
 		DeviceInterface.cpp		\
 		Digital.cpp			\
 		DigitalProxy.cpp		\
+		SpeechRecogString.cpp		\
+		SpeechRecogStringProxy.cpp	\
+		SpeechRecogDigital.cpp		\
+		SpeechRecogDigitalProxy.cpp	\
 		EventWindow.cpp			\
 		EventWindowProxy.cpp		\
 		GestureProxy.cpp		\
