Switch over to using the "console" subsystem instead of the "windows" subsystem.  This switch has been working fine for me for weeks.  As far as I can tell, this makes little difference, and we technically are writing code that runs in a console.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15121 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/Gadgeteer/Gadgeteer.vcproj
+++ b/juggler/vc7/Gadgeteer/Gadgeteer.vcproj
@@ -21,7 +21,7 @@
 				AdditionalOptions="/Zm800"
 				Optimization="0"
 				AdditionalIncludeDirectories=".;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;..\..\modules\gadgeteer;..\..\modules\vapor;..\..\modules\jackal\common;..\..\modules\jackal\config;..\..\modules\jackal\rtrc;..\VPR;..\JCCL"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_GADGET_BUILD_"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_USRDLL;_GADGET_BUILD_"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -43,7 +43,7 @@
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;..\JCCL\DebugDLL;..\VPR\DebugDLL"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/gadget_d.pdb"
-				SubSystem="2"
+				SubSystem="1"
 				ImportLibrary="$(OutDir)/gadget_d.lib"
 				TargetMachine="1"/>
 			<Tool
@@ -74,7 +74,7 @@
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories=".;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;..\..\modules\gadgeteer;..\..\modules\vapor;..\..\modules\jackal\common;..\..\modules\jackal\config;..\..\modules\jackal\rtrc;..\VPR;..\JCCL"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_GADGET_BUILD_;_OPT"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_USRDLL;_GADGET_BUILD_;_OPT"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
@@ -95,7 +95,7 @@
 				LinkIncremental="0"
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;..\JCCL\ReleaseDLL;..\VPR\ReleaseDLL"
 				GenerateDebugInformation="FALSE"
-				SubSystem="2"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				ImportLibrary="$(OutDir)/gadget.lib"
