Define preprocessor symbols needed to get symbol importing from the Tweek DLL to work correctly.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_4_BRANCH/juggler@15136 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/vc7/Gadgeteer/Tweek/Tweek.vcproj
+++ b/vc7/Gadgeteer/Tweek/Tweek.vcproj
@@ -21,7 +21,7 @@
 				AdditionalOptions="/Zm800"
 				Optimization="0"
 				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;&quot;$(OMNIORB_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\JCCL;..\..\..\modules\gadgeteer;..\..\..\modules\gadgeteer\drivers;..\..\..\modules\tweek;..\..\Tweek_CXX;..\..\Tweek_CXX\tweek\CORBA"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_GADGET_DRIVER_BUILD_;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_GADGET_DRIVER_BUILD_;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1;USE_core_stub_in_nt_dll;USE_core_stub_in_nt_dll_NOT_DEFINED_Subject"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -77,7 +77,7 @@ $(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;&quot;$(OMNIORB_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\JCCL;..\..\..\modules\gadgeteer;..\..\..\modules\gadgeteer\drivers;..\..\..\modules\tweek;..\..\Tweek_CXX;..\..\Tweek_CXX\tweek\CORBA"
-				PreprocessorDefinitions="WIN32;_OPT;NDEBUG;_WINDOWS;_USRDLL;_GADGET_DRIVER_BUILD_;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
+				PreprocessorDefinitions="WIN32;_OPT;NDEBUG;_WINDOWS;_USRDLL;_GADGET_DRIVER_BUILD_;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1;USE_core_stub_in_nt_dll;USE_core_stub_in_nt_dll_NOT_DEFINED_Subject"
 				StringPooling="TRUE"
 				MinimalRebuild="FALSE"
 				RuntimeLibrary="2"
