- Making changes to ClusterJuggler to fix various errors that were causing it to be unstable. - Start moving cluster code closer to a more abstract architecture.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15164 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/cluster/ClusterNetwork/Makefile.in
+++ b/juggler/modules/gadgeteer/cluster/ClusterNetwork/Makefile.in
@@ -47,8 +47,7 @@ top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
 SUBOBJDIR=	$(GADGET_LIBRARY)
 
-SRCS=	ClusterNode.cpp	\
-	ClusterNetwork.cpp
+SRCS=	ClusterNode.cpp
 
 include $(MKPATH)/dpp.obj.mk
 
