- Making changes to ClusterJuggler to fix various errors that were causing it to be unstable.   - Start moving cluster code closer to a more abstract architecture.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15165 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/gadget/Makefile.in
+++ b/juggler/modules/gadgeteer/gadget/Makefile.in
@@ -56,10 +56,17 @@ SUBDIR=		Devices		        \
 		Type			\
 		Util
 
-SRCS=		InputLogger.cpp		\
-		InputManager.cpp	\
-       		ProxyDepChecker.cpp	\
-		ProxyFactory.cpp
+SRCS=		AbstractNetworkManager.cpp	\
+		Acceptor.cpp			\
+		Connector.cpp			\
+		DeviceServer.cpp		\
+		InputLogger.cpp			\
+		InputManager.cpp		\
+		Node.cpp			\
+       		ProxyDepChecker.cpp		\
+		ProxyFactory.cpp		\
+		RemoteInputManager.cpp		\
+		VirtualDevice.cpp
 
 include $(MKPATH)/dpp.obj-subdir.mk
 
