- Making more changes to improve clustering.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15166 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/plugins/Makefile.in
+++ b/juggler/modules/gadgeteer/plugins/Makefile.in
@@ -135,7 +135,7 @@ endif
 
 # Subdirectories used for recursion through the source tree.
 SUBDIR=	ApplicationDataManager		\
-	RemoteInputManager		\
+	RIMPlugin			\
 	StartBarrierPlugin		\
 	SwapLockTCPPlugin		\
 	SwapLockWiredPlugin
