--- a/juggler/modules/gadgeteer/plugins/configure.in
+++ b/juggler/modules/gadgeteer/plugins/configure.in
@@ -261,7 +261,7 @@ AC_CONFIG_FILES([
    Makefile
    Makefile.inc
    plugin.defs.mk
-   RemoteInputManager/Makefile
+   RIMPlugin/Makefile
    StartBarrierPlugin/Makefile
    SwapLockTCPPlugin/Makefile
    SwapLockWiredPlugin/Makefile
